# cgexamples

./: AUTHORS  CMakeLists.txt  README.md
cmake/: CompileOptions.cmake  FindOVR.cmake
data/particles/: fluid-pass.frag  fluid-pass.vert  particles-circle.frag  particles-fluid.frag  particles-fluid.geom  particles-fluid.vert  particles-movement.comp  particles-spawning.comp  particles.comp  particles.frag  particles.geom  particles.vert
data/screen_aligned_triangles/: record.frag  replay.frag  scrat.frag  scrat.vert
data/sky_triangle/: cube_gen_17_ny.1024.1024.rgb.ub.raw  cube_gen_17_py.1024.1024.rgb.ub.raw  skytriangle.frag  skytriangle.vert
data/stereoscopic_rendering/: cube_gen_17_nx.1024.1024.rgb.ub.raw  cube_gen_17_nz.1024.1024.rgb.ub.raw  cube_gen_17_px.1024.1024.rgb.ub.raw  cube_gen_17_pz.1024.1024.rgb.ub.raw  icosahedron.frag  icosahedron.vert
source/: CMakeLists.txt
source/cgutils/: CMakeLists.txt
source/cgutils/include/cgutils/: common.h
source/cgutils/source/: common.cpp
source/particles/: CMakeLists.txt  allocator.h  allocator.inl  main.cpp  particles.cpp  particles.h
source/screen_aligned_triangles/: CMakeLists.txt  main.cpp  scrat.cpp  scrat.h
source/sky_triangle/: CMakeLists.txt  main.cpp  skytriangle.cpp  skytriangle.h
source/stereoscopic_rendering/: CMakeLists.txt  abstractrenderer.cpp  abstractrenderer.h  eyeframebuffer.cpp  eyeframebuffer.h  icosahedron.cpp  icosahedron.h  main.cpp  make_unique.h  ovr.cpp  ovr.h  scene.cpp  scene.h  sidebyside.cpp  sidebyside.h  skytriangle.cpp  squint.cpp  squint.h
